Added script - perk per column

--- a/classP/dm.html
+++ b/classP/dm.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../style.css">
     <script src="../script.js" defer></script>
+    <script src="../logicP.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
 
@@ -71,62 +72,62 @@
             <tbody>
                 <tr>
                     <td><img src="../images/dm_a1.png" class="img-fluid" id="dma1"></td>
-                    <td><img src="../images/dm_b1.png" class="img-fluid" id="dmb1"></td>
-                    <td><img src="../images/dm_c1.png" class="img-fluid" id="dmc1"></td>
-                    <td><img src="../images/dm_d1.png" class="img-fluid" id="dmd1"></td>
+                    <td><img src="../images/dm_b1.png" class="img-fluid col-b" id="dmb1"></td>
+                    <td><img src="../images/dm_c1.png" class="img-fluid col-c" id="dmc1"></td>
+                    <td><img src="../images/dm_d1.png" class="img-fluid col-d" id="dmd1"></td>
                     <td><img src="../images/dm_e1.png" class="img-fluid" id="dme1"></td>
-                    <td><img src="../images/dm_f1.png" class="img-fluid" id="dmf1"></td>
-                    <td><img src="../images/dm_g1.png" class="img-fluid" id="dmg1"></td>
-                    <td><img src="../images/dm_h1.png" class="img-fluid" id="dmh1"></td>
+                    <td><img src="../images/dm_f1.png" class="img-fluid col-f" id="dmf1"></td>
+                    <td><img src="../images/dm_g1.png" class="img-fluid col-g" id="dmg1"></td>
+                    <td><img src="../images/dm_h1.png" class="img-fluid col-h" id="dmh1"></td>
                     <td><img src="../images/dm_i1.png" class="img-fluid" id="dmi1"></td>
-                    <td><img src="../images/dm_j1.png" class="img-fluid" id="dmj1"></td>
-                    <td><img src="../images/dm_k1.png" class="img-fluid" id="dmk1"></td>
-                    <td><img src="../images/dm_l1.png" class="img-fluid" id="dml1"></td>
+                    <td><img src="../images/dm_j1.png" class="img-fluid col-j" id="dmj1"></td>
+                    <td><img src="../images/dm_k1.png" class="img-fluid col-k" id="dmk1"></td>
+                    <td><img src="../images/dm_l1.png" class="img-fluid col-l" id="dml1"></td>
                     <td><img src="../images/dm_m1.png" class="img-fluid" id="dmm1"></td>
                 </tr>
                 <tr>
                     <td><img src="../images/dm_a2.png" class="img-fluid" id="dma2"></td>
-                    <td><img src="../images/dm_b2.png" class="img-fluid" id="dmb2"></td>
-                    <td><img src="../images/dm_c2.png" class="img-fluid" id="dmc2"></td>
-                    <td><img src="../images/dm_d2.png" class="img-fluid" id="dmd2"></td>
+                    <td><img src="../images/dm_b2.png" class="img-fluid col-b" id="dmb2"></td>
+                    <td><img src="../images/dm_c2.png" class="img-fluid col-c" id="dmc2"></td>
+                    <td><img src="../images/dm_d2.png" class="img-fluid col-d" id="dmd2"></td>
                     <td><img src="../images/dm_e2.png" class="img-fluid" id="dme2"></td>
-                    <td><img src="../images/dm_f2.png" class="img-fluid" id="dmf2"></td>
-                    <td><img src="../images/dm_g2.png" class="img-fluid" id="dmg2"></td>
-                    <td><img src="../images/dm_h2.png" class="img-fluid" id="dmh2"></td>
+                    <td><img src="../images/dm_f2.png" class="img-fluid col-f" id="dmf2"></td>
+                    <td><img src="../images/dm_g2.png" class="img-fluid col-g" id="dmg2"></td>
+                    <td><img src="../images/dm_h2.png" class="img-fluid col-h" id="dmh2"></td>
                     <td><img src="../images/dm_i2.png" class="img-fluid" id="dmi2"></td>
-                    <td><img src="../images/dm_j2.png" class="img-fluid" id="dmj2"></td>
-                    <td><img src="../images/dm_k2.png" class="img-fluid" id="dmk2"></td>
-                    <td><img src="../images/dm_l2.png" class="img-fluid" id="dml2"></td>
+                    <td><img src="../images/dm_j2.png" class="img-fluid col-j" id="dmj2"></td>
+                    <td><img src="../images/dm_k2.png" class="img-fluid col-k" id="dmk2"></td>
+                    <td><img src="../images/dm_l2.png" class="img-fluid col-l" id="dml2"></td>
                     <td><img src="../images/dm_m2.png" class="img-fluid" id="dmm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/dm_b3.png" class="img-fluid" id="dmb3"></td>
-                    <td><img src="../images/dm_c3.png" class="img-fluid" id="dmc3"></td>
-                    <td><img src="../images/dm_d3.png" class="img-fluid" id="dmd3"></td>
+                    <td><img src="../images/dm_b3.png" class="img-fluid col-b" id="dmb3"></td>
+                    <td><img src="../images/dm_c3.png" class="img-fluid col-c" id="dmc3"></td>
+                    <td><img src="../images/dm_d3.png" class="img-fluid col-d" id="dmd3"></td>
                     <td></td>
-                    <td><img src="../images/dm_f3.png" class="img-fluid" id="dmf3"></td>
-                    <td><img src="../images/dm_g3.png" class="img-fluid" id="dmg3"></td>
-                    <td><img src="../images/dm_h3.png" class="img-fluid" id="dmh3"></td>
+                    <td><img src="../images/dm_f3.png" class="img-fluid col-f" id="dmf3"></td>
+                    <td><img src="../images/dm_g3.png" class="img-fluid col-g" id="dmg3"></td>
+                    <td><img src="../images/dm_h3.png" class="img-fluid col-h" id="dmh3"></td>
                     <td></td>
-                    <td><img src="../images/dm_j3.png" class="img-fluid" id="dmj3"></td>
-                    <td><img src="../images/dm_k3.png" class="img-fluid" id="dmk3"></td>
-                    <td><img src="../images/dm_l3.png" class="img-fluid" id="dml3"></td>
+                    <td><img src="../images/dm_j3.png" class="img-fluid col-j" id="dmj3"></td>
+                    <td><img src="../images/dm_k3.png" class="img-fluid col-k" id="dmk3"></td>
+                    <td><img src="../images/dm_l3.png" class="img-fluid col-l" id="dml3"></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/dm_b4.png" class="img-fluid" id="dmb4"></td>
-                    <td><img src="../images/dm_c4.png" class="img-fluid" id="dmc4"></td>
-                    <td><img src="../images/dm_d4.png" class="img-fluid" id="dmd4"></td>
+                    <td><img src="../images/dm_b4.png" class="img-fluid col-b" id="dmb4"></td>
+                    <td><img src="../images/dm_c4.png" class="img-fluid col-c" id="dmc4"></td>
+                    <td><img src="../images/dm_d4.png" class="img-fluid col-d" id="dmd4"></td>
                     <td></td>
-                    <td><img src="../images/dm_f4.png" class="img-fluid" id="dmf4"></td>
-                    <td><img src="../images/dm_g4.png" class="img-fluid" id="dmg4"></td>
-                    <td><img src="../images/dm_h4.png" class="img-fluid" id="dmh4"></td>
+                    <td><img src="../images/dm_f4.png" class="img-fluid col-f" id="dmf4"></td>
+                    <td><img src="../images/dm_g4.png" class="img-fluid col-g" id="dmg4"></td>
+                    <td><img src="../images/dm_h4.png" class="img-fluid col-h" id="dmh4"></td>
                     <td></td>
-                    <td><img src="../images/dm_j4.png" class="img-fluid" id="dmj4"></td>
-                    <td><img src="../images/dm_k4.png" class="img-fluid" id="dmk4"></td>
-                    <td><img src="../images/dm_l4.png" class="img-fluid" id="dml4"></td>
+                    <td><img src="../images/dm_j4.png" class="img-fluid col-j" id="dmj4"></td>
+                    <td><img src="../images/dm_k4.png" class="img-fluid col-k" id="dmk4"></td>
+                    <td><img src="../images/dm_l4.png" class="img-fluid col-l" id="dml4"></td>
                     <td></td>
                 </tr>
             </tbody>
