--- a/classP/ex.html
+++ b/classP/ex.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../style.css">
     <script src="../script.js" defer></script>
+    <script src="../logicP.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
 
@@ -71,62 +72,62 @@
             <tbody>
                 <tr>
                     <td><img src="../images/ex_a1.png" class="img-fluid" id="exa1"></td>
-                    <td><img src="../images/ex_b1.png" class="img-fluid" id="exb1"></td>
-                    <td><img src="../images/ex_c1.png" class="img-fluid" id="exc1"></td>
-                    <td><img src="../images/ex_d1.png" class="img-fluid" id="exd1"></td>
+                    <td><img src="../images/ex_b1.png" class="img-fluid col-b" id="exb1"></td>
+                    <td><img src="../images/ex_c1.png" class="img-fluid col-c" id="exc1"></td>
+                    <td><img src="../images/ex_d1.png" class="img-fluid col-d" id="exd1"></td>
                     <td><img src="../images/ex_e1.png" class="img-fluid" id="exe1"></td>
-                    <td><img src="../images/ex_f1.png" class="img-fluid" id="exf1"></td>
-                    <td><img src="../images/ex_g1.png" class="img-fluid" id="exg1"></td>
-                    <td><img src="../images/ex_h1.png" class="img-fluid" id="exh1"></td>
+                    <td><img src="../images/ex_f1.png" class="img-fluid col-f" id="exf1"></td>
+                    <td><img src="../images/ex_g1.png" class="img-fluid col-g" id="exg1"></td>
+                    <td><img src="../images/ex_h1.png" class="img-fluid col-h" id="exh1"></td>
                     <td><img src="../images/ex_i1.png" class="img-fluid" id="exi1"></td>
-                    <td><img src="../images/ex_j1.png" class="img-fluid" id="exj1"></td>
-                    <td><img src="../images/ex_k1.png" class="img-fluid" id="exk1"></td>
-                    <td><img src="../images/ex_l1.png" class="img-fluid" id="exl1"></td>
+                    <td><img src="../images/ex_j1.png" class="img-fluid col-j" id="exj1"></td>
+                    <td><img src="../images/ex_k1.png" class="img-fluid col-k" id="exk1"></td>
+                    <td><img src="../images/ex_l1.png" class="img-fluid col-l" id="exl1"></td>
                     <td><img src="../images/ex_m1.png" class="img-fluid" id="exm1"></td>
                 </tr>
                 <tr>
                     <td><img src="../images/ex_a2.png" class="img-fluid" id="exa2"></td>
-                    <td><img src="../images/ex_b2.png" class="img-fluid" id="exb2"></td>
-                    <td><img src="../images/ex_c2.png" class="img-fluid" id="exc2"></td>
-                    <td><img src="../images/ex_d2.png" class="img-fluid" id="exd2"></td>
+                    <td><img src="../images/ex_b2.png" class="img-fluid col-b" id="exb2"></td>
+                    <td><img src="../images/ex_c2.png" class="img-fluid col-c" id="exc2"></td>
+                    <td><img src="../images/ex_d2.png" class="img-fluid col-d" id="exd2"></td>
                     <td><img src="../images/ex_e2.png" class="img-fluid" id="exe2"></td>
-                    <td><img src="../images/ex_f2.png" class="img-fluid" id="exf2"></td>
-                    <td><img src="../images/ex_g2.png" class="img-fluid" id="exg2"></td>
-                    <td><img src="../images/ex_h2.png" class="img-fluid" id="exh2"></td>
+                    <td><img src="../images/ex_f2.png" class="img-fluid col-f" id="exf2"></td>
+                    <td><img src="../images/ex_g2.png" class="img-fluid col-g" id="exg2"></td>
+                    <td><img src="../images/ex_h2.png" class="img-fluid col-h" id="exh2"></td>
                     <td><img src="../images/ex_i2.png" class="img-fluid" id="exi2"></td>
-                    <td><img src="../images/ex_j2.png" class="img-fluid" id="exj2"></td>
-                    <td><img src="../images/ex_k2.png" class="img-fluid" id="exk2"></td>
-                    <td><img src="../images/ex_l2.png" class="img-fluid" id="exl2"></td>
+                    <td><img src="../images/ex_j2.png" class="img-fluid col-j" id="exj2"></td>
+                    <td><img src="../images/ex_k2.png" class="img-fluid col-k" id="exk2"></td>
+                    <td><img src="../images/ex_l2.png" class="img-fluid col-l" id="exl2"></td>
                     <td><img src="../images/ex_m2.png" class="img-fluid" id="exm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/ex_b3.png" class="img-fluid" id="exb3"></td>
-                    <td><img src="../images/ex_c3.png" class="img-fluid" id="exc3"></td>
-                    <td><img src="../images/ex_d3.png" class="img-fluid" id="exd3"></td>
+                    <td><img src="../images/ex_b3.png" class="img-fluid col-b" id="exb3"></td>
+                    <td><img src="../images/ex_c3.png" class="img-fluid col-c" id="exc3"></td>
+                    <td><img src="../images/ex_d3.png" class="img-fluid col-d" id="exd3"></td>
                     <td></td>
-                    <td><img src="../images/ex_f3.png" class="img-fluid" id="exf3"></td>
-                    <td><img src="../images/ex_g3.png" class="img-fluid" id="exg3"></td>
-                    <td><img src="../images/ex_h3.png" class="img-fluid" id="exh3"></td>
+                    <td><img src="../images/ex_f3.png" class="img-fluid col-f" id="exf3"></td>
+                    <td><img src="../images/ex_g3.png" class="img-fluid col-g" id="exg3"></td>
+                    <td><img src="../images/ex_h3.png" class="img-fluid col-h" id="exh3"></td>
                     <td></td>
-                    <td><img src="../images/ex_j3.png" class="img-fluid" id="exj3"></td>
-                    <td><img src="../images/ex_k3.png" class="img-fluid" id="exk3"></td>
-                    <td><img src="../images/ex_l3.png" class="img-fluid" id="exl3"></td>
+                    <td><img src="../images/ex_j3.png" class="img-fluid col-j" id="exj3"></td>
+                    <td><img src="../images/ex_k3.png" class="img-fluid col-k" id="exk3"></td>
+                    <td><img src="../images/ex_l3.png" class="img-fluid col-l" id="exl3"></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/ex_b4.png" class="img-fluid" id="exb4"></td>
-                    <td><img src="../images/ex_c4.png" class="img-fluid" id="exc4"></td>
-                    <td><img src="../images/ex_d4.png" class="img-fluid" id="exd4"></td>
+                    <td><img src="../images/ex_b4.png" class="img-fluid col-b" id="exb4"></td>
+                    <td><img src="../images/ex_c4.png" class="img-fluid col-c" id="exc4"></td>
+                    <td><img src="../images/ex_d4.png" class="img-fluid col-d" id="exd4"></td>
                     <td></td>
-                    <td><img src="../images/ex_f4.png" class="img-fluid" id="exf4"></td>
-                    <td><img src="../images/ex_g4.png" class="img-fluid" id="exg4"></td>
-                    <td><img src="../images/ex_h4.png" class="img-fluid" id="exh4"></td>
+                    <td><img src="../images/ex_f4.png" class="img-fluid col-f" id="exf4"></td>
+                    <td><img src="../images/ex_g4.png" class="img-fluid col-g" id="exg4"></td>
+                    <td><img src="../images/ex_h4.png" class="img-fluid col-h" id="exh4"></td>
                     <td></td>
-                    <td><img src="../images/ex_j4.png" class="img-fluid" id="exj4"></td>
-                    <td><img src="../images/ex_k4.png" class="img-fluid" id="exk4"></td>
-                    <td><img src="../images/ex_l4.png" class="img-fluid" id="exl4"></td>
+                    <td><img src="../images/ex_j4.png" class="img-fluid col-j" id="exj4"></td>
+                    <td><img src="../images/ex_k4.png" class="img-fluid col-k" id="exk4"></td>
+                    <td><img src="../images/ex_l4.png" class="img-fluid col-l" id="exl4"></td>
                     <td></td>
                 </tr>
             </tbody>
