--- a/classP/f.html
+++ b/classP/f.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../style.css">
     <script src="../script.js" defer></script>
+    <script src="../logicP.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
 
@@ -71,62 +72,62 @@
             <tbody>
                 <tr>
                     <td><img src="../images/f_a1.png" class="img-fluid" id="fa1"></td>
-                    <td><img src="../images/f_b1.png" class="img-fluid" id="fb1"></td>
-                    <td><img src="../images/f_c1.png" class="img-fluid" id="fc1"></td>
-                    <td><img src="../images/f_d1.png" class="img-fluid" id="fd1"></td>
+                    <td><img src="../images/f_b1.png" class="img-fluid col-b" id="fb1"></td>
+                    <td><img src="../images/f_c1.png" class="img-fluid col-c" id="fc1"></td>
+                    <td><img src="../images/f_d1.png" class="img-fluid col-d" id="fd1"></td>
                     <td><img src="../images/f_e1.png" class="img-fluid" id="fe1"></td>
-                    <td><img src="../images/f_f1.png" class="img-fluid" id="ff1"></td>
-                    <td><img src="../images/f_g1.png" class="img-fluid" id="fg1"></td>
-                    <td><img src="../images/f_h1.png" class="img-fluid" id="fh1"></td>
+                    <td><img src="../images/f_f1.png" class="img-fluid col-f" id="ff1"></td>
+                    <td><img src="../images/f_g1.png" class="img-fluid col-g" id="fg1"></td>
+                    <td><img src="../images/f_h1.png" class="img-fluid col-h" id="fh1"></td>
                     <td><img src="../images/f_i1.png" class="img-fluid" id="fi1"></td>
-                    <td><img src="../images/f_j1.png" class="img-fluid" id="fj1"></td>
-                    <td><img src="../images/f_k1.png" class="img-fluid" id="fk1"></td>
-                    <td><img src="../images/f_l1.png" class="img-fluid" id="fl1"></td>
+                    <td><img src="../images/f_j1.png" class="img-fluid col-j" id="fj1"></td>
+                    <td><img src="../images/f_k1.png" class="img-fluid col-k" id="fk1"></td>
+                    <td><img src="../images/f_l1.png" class="img-fluid col-l" id="fl1"></td>
                     <td><img src="../images/f_m1.png" class="img-fluid" id="fm1"></td>
                 </tr>
                 <tr>
                     <td><img src="../images/f_a2.png" class="img-fluid" id="fa2"></td>
-                    <td><img src="../images/f_b2.png" class="img-fluid" id="fb2"></td>
-                    <td><img src="../images/f_c2.png" class="img-fluid" id="fc2"></td>
-                    <td><img src="../images/f_d2.png" class="img-fluid" id="fd2"></td>
+                    <td><img src="../images/f_b2.png" class="img-fluid col-b" id="fb2"></td>
+                    <td><img src="../images/f_c2.png" class="img-fluid col-c" id="fc2"></td>
+                    <td><img src="../images/f_d2.png" class="img-fluid col-d" id="fd2"></td>
                     <td><img src="../images/f_e2.png" class="img-fluid" id="fe2"></td>
-                    <td><img src="../images/f_f2.png" class="img-fluid" id="ff2"></td>
-                    <td><img src="../images/f_g2.png" class="img-fluid" id="fg2"></td>
-                    <td><img src="../images/f_h2.png" class="img-fluid" id="fh2"></td>
+                    <td><img src="../images/f_f2.png" class="img-fluid col-f" id="ff2"></td>
+                    <td><img src="../images/f_g2.png" class="img-fluid col-g" id="fg2"></td>
+                    <td><img src="../images/f_h2.png" class="img-fluid col-h" id="fh2"></td>
                     <td><img src="../images/f_i2.png" class="img-fluid" id="fi2"></td>
-                    <td><img src="../images/f_j2.png" class="img-fluid" id="fj2"></td>
-                    <td><img src="../images/f_k2.png" class="img-fluid" id="fk2"></td>
-                    <td><img src="../images/f_l2.png" class="img-fluid" id="fl2"></td>
+                    <td><img src="../images/f_j2.png" class="img-fluid col-j" id="fj2"></td>
+                    <td><img src="../images/f_k2.png" class="img-fluid col-k" id="fk2"></td>
+                    <td><img src="../images/f_l2.png" class="img-fluid col-l" id="fl2"></td>
                     <td><img src="../images/f_m2.png" class="img-fluid" id="fm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/f_b3.png" class="img-fluid" id="fb3"></td>
-                    <td><img src="../images/f_c3.png" class="img-fluid" id="fc3"></td>
-                    <td><img src="../images/f_d3.png" class="img-fluid" id="fd3"></td>
+                    <td><img src="../images/f_b3.png" class="img-fluid col-b" id="fb3"></td>
+                    <td><img src="../images/f_c3.png" class="img-fluid col-c" id="fc3"></td>
+                    <td><img src="../images/f_d3.png" class="img-fluid col-d" id="fd3"></td>
                     <td></td>
-                    <td><img src="../images/f_f3.png" class="img-fluid" id="ff3"></td>
-                    <td><img src="../images/f_g3.png" class="img-fluid" id="fg3"></td>
-                    <td><img src="../images/f_h3.png" class="img-fluid" id="fh3"></td>
+                    <td><img src="../images/f_f3.png" class="img-fluid col-f" id="ff3"></td>
+                    <td><img src="../images/f_g3.png" class="img-fluid col-g" id="fg3"></td>
+                    <td><img src="../images/f_h3.png" class="img-fluid col-h" id="fh3"></td>
                     <td></td>
-                    <td><img src="../images/f_j3.png" class="img-fluid" id="fj3"></td>
-                    <td><img src="../images/f_k3.png" class="img-fluid" id="fk3"></td>
-                    <td><img src="../images/f_l3.png" class="img-fluid" id="fl3"></td>
+                    <td><img src="../images/f_j3.png" class="img-fluid col-j" id="fj3"></td>
+                    <td><img src="../images/f_k3.png" class="img-fluid col-k" id="fk3"></td>
+                    <td><img src="../images/f_l3.png" class="img-fluid col-l" id="fl3"></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/f_b4.png" class="img-fluid" id="fb4"></td>
-                    <td><img src="../images/f_c4.png" class="img-fluid" id="fc4"></td>
-                    <td><img src="../images/f_d4.png" class="img-fluid" id="fd4"></td>
+                    <td><img src="../images/f_b4.png" class="img-fluid col-b" id="fb4"></td>
+                    <td><img src="../images/f_c4.png" class="img-fluid col-c" id="fc4"></td>
+                    <td><img src="../images/f_d4.png" class="img-fluid col-d" id="fd4"></td>
                     <td></td>
-                    <td><img src="../images/f_f4.png" class="img-fluid" id="ff4"></td>
-                    <td><img src="../images/f_g4.png" class="img-fluid" id="fg4"></td>
-                    <td><img src="../images/f_h4.png" class="img-fluid" id="fh4"></td>
+                    <td><img src="../images/f_f4.png" class="img-fluid col-f" id="ff4"></td>
+                    <td><img src="../images/f_g4.png" class="img-fluid col-g" id="fg4"></td>
+                    <td><img src="../images/f_h4.png" class="img-fluid col-h" id="fh4"></td>
                     <td></td>
-                    <td><img src="../images/f_j4.png" class="img-fluid" id="fj4"></td>
-                    <td><img src="../images/f_k4.png" class="img-fluid" id="fk4"></td>
-                    <td><img src="../images/f_l4.png" class="img-fluid" id="fl4"></td>
+                    <td><img src="../images/f_j4.png" class="img-fluid col-j" id="fj4"></td>
+                    <td><img src="../images/f_k4.png" class="img-fluid col-k" id="fk4"></td>
+                    <td><img src="../images/f_l4.png" class="img-fluid col-l" id="fl4"></td>
                     <td></td>
                 </tr>
             </tbody>
