--- a/classP/hr.html
+++ b/classP/hr.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../style.css">
     <script src="../script.js" defer></script>
+    <script src="../logicP.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
 
@@ -71,62 +72,62 @@
             <tbody>
                 <tr>
                     <td><img src="../images/hr_a1.png" class="img-fluid" id="hra1"></td>
-                    <td><img src="../images/hr_b1.png" class="img-fluid" id="hrb1"></td>
-                    <td><img src="../images/hr_c1.png" class="img-fluid" id="hrc1"></td>
-                    <td><img src="../images/hr_d1.png" class="img-fluid" id="hrd1"></td>
+                    <td><img src="../images/hr_b1.png" class="img-fluid col-b" id="hrb1"></td>
+                    <td><img src="../images/hr_c1.png" class="img-fluid col-c" id="hrc1"></td>
+                    <td><img src="../images/hr_d1.png" class="img-fluid col-d" id="hrd1"></td>
                     <td><img src="../images/hr_e1.png" class="img-fluid" id="hre1"></td>
-                    <td><img src="../images/hr_f1.png" class="img-fluid" id="hrf1"></td>
-                    <td><img src="../images/hr_g1.png" class="img-fluid" id="hrg1"></td>
-                    <td><img src="../images/hr_h1.png" class="img-fluid" id="hrh1"></td>
+                    <td><img src="../images/hr_f1.png" class="img-fluid col-f" id="hrf1"></td>
+                    <td><img src="../images/hr_g1.png" class="img-fluid col-g" id="hrg1"></td>
+                    <td><img src="../images/hr_h1.png" class="img-fluid col-h" id="hrh1"></td>
                     <td><img src="../images/hr_i1.png" class="img-fluid" id="hri1"></td>
-                    <td><img src="../images/hr_j1.png" class="img-fluid" id="hrj1"></td>
-                    <td><img src="../images/hr_k1.png" class="img-fluid" id="hrk1"></td>
-                    <td><img src="../images/hr_l1.png" class="img-fluid" id="hrl1"></td>
+                    <td><img src="../images/hr_j1.png" class="img-fluid col-j" id="hrj1"></td>
+                    <td><img src="../images/hr_k1.png" class="img-fluid col-k" id="hrk1"></td>
+                    <td><img src="../images/hr_l1.png" class="img-fluid col-l" id="hrl1"></td>
                     <td><img src="../images/hr_m1.png" class="img-fluid" id="hrm1"></td>
                 </tr>
                 <tr>
                     <td><img src="../images/hr_a2.png" class="img-fluid" id="hra2"></td>
-                    <td><img src="../images/hr_b2.png" class="img-fluid" id="hrb2"></td>
-                    <td><img src="../images/hr_c2.png" class="img-fluid" id="hrc2"></td>
-                    <td><img src="../images/hr_d2.png" class="img-fluid" id="hrd2"></td>
+                    <td><img src="../images/hr_b2.png" class="img-fluid col-b" id="hrb2"></td>
+                    <td><img src="../images/hr_c2.png" class="img-fluid col-c" id="hrc2"></td>
+                    <td><img src="../images/hr_d2.png" class="img-fluid col-d" id="hrd2"></td>
                     <td><img src="../images/hr_e2.png" class="img-fluid" id="hre2"></td>
-                    <td><img src="../images/hr_f2.png" class="img-fluid" id="hrf2"></td>
-                    <td><img src="../images/hr_g2.png" class="img-fluid" id="hrg2"></td>
-                    <td><img src="../images/hr_h2.png" class="img-fluid" id="hrh2"></td>
+                    <td><img src="../images/hr_f2.png" class="img-fluid col-f" id="hrf2"></td>
+                    <td><img src="../images/hr_g2.png" class="img-fluid col-g" id="hrg2"></td>
+                    <td><img src="../images/hr_h2.png" class="img-fluid col-h" id="hrh2"></td>
                     <td><img src="../images/hr_i2.png" class="img-fluid" id="hri2"></td>
-                    <td><img src="../images/hr_j2.png" class="img-fluid" id="hrj2"></td>
-                    <td><img src="../images/hr_k2.png" class="img-fluid" id="hrk2"></td>
-                    <td><img src="../images/hr_l2.png" class="img-fluid" id="hrl2"></td>
+                    <td><img src="../images/hr_j2.png" class="img-fluid col-j" id="hrj2"></td>
+                    <td><img src="../images/hr_k2.png" class="img-fluid col-k" id="hrk2"></td>
+                    <td><img src="../images/hr_l2.png" class="img-fluid col-l" id="hrl2"></td>
                     <td><img src="../images/hr_m2.png" class="img-fluid" id="hrm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/hr_b3.png" class="img-fluid" id="hrb3"></td>
-                    <td><img src="../images/hr_c3.png" class="img-fluid" id="hrc3"></td>
-                    <td><img src="../images/hr_d3.png" class="img-fluid" id="hrd3"></td>
+                    <td><img src="../images/hr_b3.png" class="img-fluid col-b" id="hrb3"></td>
+                    <td><img src="../images/hr_c3.png" class="img-fluid col-c" id="hrc3"></td>
+                    <td><img src="../images/hr_d3.png" class="img-fluid col-d" id="hrd3"></td>
                     <td></td>
-                    <td><img src="../images/hr_f3.png" class="img-fluid" id="hrf3"></td>
-                    <td><img src="../images/hr_g3.png" class="img-fluid" id="hrg3"></td>
-                    <td><img src="../images/hr_h3.png" class="img-fluid" id="hrh3"></td>
+                    <td><img src="../images/hr_f3.png" class="img-fluid col-f" id="hrf3"></td>
+                    <td><img src="../images/hr_g3.png" class="img-fluid col-g" id="hrg3"></td>
+                    <td><img src="../images/hr_h3.png" class="img-fluid col-h" id="hrh3"></td>
                     <td></td>
-                    <td><img src="../images/hr_j3.png" class="img-fluid" id="hrj3"></td>
-                    <td><img src="../images/hr_k3.png" class="img-fluid" id="hrk3"></td>
-                    <td><img src="../images/hr_l3.png" class="img-fluid" id="hrl3"></td>
+                    <td><img src="../images/hr_j3.png" class="img-fluid col-j" id="hrj3"></td>
+                    <td><img src="../images/hr_k3.png" class="img-fluid col-k" id="hrk3"></td>
+                    <td><img src="../images/hr_l3.png" class="img-fluid col-l" id="hrl3"></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/hr_b4.png" class="img-fluid" id="hrb4"></td>
-                    <td><img src="../images/hr_c4.png" class="img-fluid" id="hrc4"></td>
-                    <td><img src="../images/hr_d4.png" class="img-fluid" id="hrd4"></td>
+                    <td><img src="../images/hr_b4.png" class="img-fluid col-b" id="hrb4"></td>
+                    <td><img src="../images/hr_c4.png" class="img-fluid col-c" id="hrc4"></td>
+                    <td><img src="../images/hr_d4.png" class="img-fluid col-d" id="hrd4"></td>
                     <td></td>
-                    <td><img src="../images/hr_f4.png" class="img-fluid" id="hrf4"></td>
-                    <td><img src="../images/hr_g4.png" class="img-fluid" id="hrg4"></td>
-                    <td><img src="../images/hr_h4.png" class="img-fluid" id="hrh4"></td>
+                    <td><img src="../images/hr_f4.png" class="img-fluid col-f" id="hrf4"></td>
+                    <td><img src="../images/hr_g4.png" class="img-fluid col-g" id="hrg4"></td>
+                    <td><img src="../images/hr_h4.png" class="img-fluid col-h" id="hrh4"></td>
                     <td></td>
-                    <td><img src="../images/hr_j4.png" class="img-fluid" id="hrj4"></td>
-                    <td><img src="../images/hr_k4.png" class="img-fluid" id="hrk4"></td>
-                    <td><img src="../images/hr_l4.png" class="img-fluid" id="hrl4"></td>
+                    <td><img src="../images/hr_j4.png" class="img-fluid col-j" id="hrj4"></td>
+                    <td><img src="../images/hr_k4.png" class="img-fluid col-k" id="hrk4"></td>
+                    <td><img src="../images/hr_l4.png" class="img-fluid col-l" id="hrl4"></td>
                     <td></td>
                 </tr>
             </tbody>
