--- a/classP/m.html
+++ b/classP/m.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../style.css">
     <script src="../script.js" defer></script>
+    <script src="../logicP.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
 
@@ -71,62 +72,62 @@
             <tbody>
                 <tr>
                     <td><img src="../images/m_a1.png" class="img-fluid" id="ma1"></td>
-                    <td><img src="../images/m_b1.png" class="img-fluid" id="mb1"></td>
-                    <td><img src="../images/m_c1.png" class="img-fluid" id="mc1"></td>
-                    <td><img src="../images/m_d1.png" class="img-fluid" id="md1"></td>
+                    <td><img src="../images/m_b1.png" class="img-fluid col-b" id="mb1"></td>
+                    <td><img src="../images/m_c1.png" class="img-fluid col-c" id="mc1"></td>
+                    <td><img src="../images/m_d1.png" class="img-fluid col-d" id="md1"></td>
                     <td><img src="../images/m_e1.png" class="img-fluid" id="me1"></td>
-                    <td><img src="../images/m_f1.png" class="img-fluid" id="mf1"></td>
-                    <td><img src="../images/m_g1.png" class="img-fluid" id="mg1"></td>
-                    <td><img src="../images/m_h1.png" class="img-fluid" id="mh1"></td>
+                    <td><img src="../images/m_f1.png" class="img-fluid col-f" id="mf1"></td>
+                    <td><img src="../images/m_g1.png" class="img-fluid col-g" id="mg1"></td>
+                    <td><img src="../images/m_h1.png" class="img-fluid col-h" id="mh1"></td>
                     <td><img src="../images/m_i1.png" class="img-fluid" id="mi1"></td>
-                    <td><img src="../images/m_j1.png" class="img-fluid" id="mj1"></td>
-                    <td><img src="../images/m_k1.png" class="img-fluid" id="mk1"></td>
-                    <td><img src="../images/m_l1.png" class="img-fluid" id="ml1"></td>
+                    <td><img src="../images/m_j1.png" class="img-fluid col-j" id="mj1"></td>
+                    <td><img src="../images/m_k1.png" class="img-fluid col-k" id="mk1"></td>
+                    <td><img src="../images/m_l1.png" class="img-fluid col-l" id="ml1"></td>
                     <td><img src="../images/m_m1.png" class="img-fluid" id="mm1"></td>
                 </tr>
                 <tr>
                     <td><img src="../images/m_a2.png" class="img-fluid" id="ma2"></td>
-                    <td><img src="../images/m_b2.png" class="img-fluid" id="mb2"></td>
-                    <td><img src="../images/m_c2.png" class="img-fluid" id="mc2"></td>
-                    <td><img src="../images/m_d2.png" class="img-fluid" id="md2"></td>
+                    <td><img src="../images/m_b2.png" class="img-fluid col-b" id="mb2"></td>
+                    <td><img src="../images/m_c2.png" class="img-fluid col-c" id="mc2"></td>
+                    <td><img src="../images/m_d2.png" class="img-fluid col-d" id="md2"></td>
                     <td><img src="../images/m_e2.png" class="img-fluid" id="me2"></td>
-                    <td><img src="../images/m_f2.png" class="img-fluid" id="mf2"></td>
-                    <td><img src="../images/m_g2.png" class="img-fluid" id="mg2"></td>
-                    <td><img src="../images/m_h2.png" class="img-fluid" id="mh2"></td>
+                    <td><img src="../images/m_f2.png" class="img-fluid col-f" id="mf2"></td>
+                    <td><img src="../images/m_g2.png" class="img-fluid col-g" id="mg2"></td>
+                    <td><img src="../images/m_h2.png" class="img-fluid col-h" id="mh2"></td>
                     <td><img src="../images/m_i2.png" class="img-fluid" id="mi2"></td>
-                    <td><img src="../images/m_j2.png" class="img-fluid" id="mj2"></td>
-                    <td><img src="../images/m_k2.png" class="img-fluid" id="mk2"></td>
-                    <td><img src="../images/m_l2.png" class="img-fluid" id="ml2"></td>
+                    <td><img src="../images/m_j2.png" class="img-fluid col-j" id="mj2"></td>
+                    <td><img src="../images/m_k2.png" class="img-fluid col-k" id="mk2"></td>
+                    <td><img src="../images/m_l2.png" class="img-fluid col-l" id="ml2"></td>
                     <td><img src="../images/m_m2.png" class="img-fluid" id="mm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/m_b3.png" class="img-fluid" id="mb3"></td>
-                    <td><img src="../images/m_c3.png" class="img-fluid" id="mc3"></td>
-                    <td><img src="../images/m_d3.png" class="img-fluid" id="md3"></td>
+                    <td><img src="../images/m_b3.png" class="img-fluid col-b" id="mb3"></td>
+                    <td><img src="../images/m_c3.png" class="img-fluid col-c" id="mc3"></td>
+                    <td><img src="../images/m_d3.png" class="img-fluid col-d" id="md3"></td>
                     <td></td>
-                    <td><img src="../images/m_f3.png" class="img-fluid" id="mf3"></td>
-                    <td><img src="../images/m_g3.png" class="img-fluid" id="mg3"></td>
-                    <td><img src="../images/m_h3.png" class="img-fluid" id="mh3"></td>
+                    <td><img src="../images/m_f3.png" class="img-fluid col-f" id="mf3"></td>
+                    <td><img src="../images/m_g3.png" class="img-fluid col-g" id="mg3"></td>
+                    <td><img src="../images/m_h3.png" class="img-fluid col-h" id="mh3"></td>
                     <td></td>
-                    <td><img src="../images/m_j3.png" class="img-fluid" id="mj3"></td>
-                    <td><img src="../images/m_k3.png" class="img-fluid" id="mk3"></td>
-                    <td><img src="../images/m_l3.png" class="img-fluid" id="ml3"></td>
+                    <td><img src="../images/m_j3.png" class="img-fluid col-j" id="mj3"></td>
+                    <td><img src="../images/m_k3.png" class="img-fluid col-k" id="mk3"></td>
+                    <td><img src="../images/m_l3.png" class="img-fluid col-l" id="ml3"></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/m_b4.png" class="img-fluid" id="mb4"></td>
-                    <td><img src="../images/m_c4.png" class="img-fluid" id="mc4"></td>
-                    <td><img src="../images/m_d4.png" class="img-fluid" id="md4"></td>
+                    <td><img src="../images/m_b4.png" class="img-fluid col-b" id="mb4"></td>
+                    <td><img src="../images/m_c4.png" class="img-fluid col-c" id="mc4"></td>
+                    <td><img src="../images/m_d4.png" class="img-fluid col-d" id="md4"></td>
                     <td></td>
-                    <td><img src="../images/m_f4.png" class="img-fluid" id="mf4"></td>
-                    <td><img src="../images/m_g4.png" class="img-fluid" id="mg4"></td>
-                    <td><img src="../images/m_h4.png" class="img-fluid" id="mh4"></td>
+                    <td><img src="../images/m_f4.png" class="img-fluid col-f" id="mf4"></td>
+                    <td><img src="../images/m_g4.png" class="img-fluid col-g" id="mg4"></td>
+                    <td><img src="../images/m_h4.png" class="img-fluid col-h" id="mh4"></td>
                     <td></td>
-                    <td><img src="../images/m_j4.png" class="img-fluid" id="mj4"></td>
-                    <td><img src="../images/m_k4.png" class="img-fluid" id="mk4"></td>
-                    <td><img src="../images/m_l4.png" class="img-fluid" id="ml4"></td>
+                    <td><img src="../images/m_j4.png" class="img-fluid col-j" id="mj4"></td>
+                    <td><img src="../images/m_k4.png" class="img-fluid col-k" id="mk4"></td>
+                    <td><img src="../images/m_l4.png" class="img-fluid col-l" id="ml4"></td>
                     <td></td>
                 </tr>
             </tbody>
