--- a/classP/s.html
+++ b/classP/s.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../style.css">
     <script src="../script.js" defer></script>
+    <script src="../logicP.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
 
@@ -71,62 +72,62 @@
             <tbody>
                 <tr>
                     <td><img src="../images/s_a1.png" class="img-fluid" id="sa1"></td>
-                    <td><img src="../images/s_b1.png" class="img-fluid" id="sb1"></td>
-                    <td><img src="../images/s_c1.png" class="img-fluid" id="sc1"></td>
-                    <td><img src="../images/s_d1.png" class="img-fluid" id="sd1"></td>
+                    <td><img src="../images/s_b1.png" class="img-fluid col-b" id="sb1"></td>
+                    <td><img src="../images/s_c1.png" class="img-fluid col-c" id="sc1"></td>
+                    <td><img src="../images/s_d1.png" class="img-fluid col-d" id="sd1"></td>
                     <td><img src="../images/s_e1.png" class="img-fluid" id="se1"></td>
-                    <td><img src="../images/s_f1.png" class="img-fluid" id="sf1"></td>
-                    <td><img src="../images/s_g1.png" class="img-fluid" id="sg1"></td>
-                    <td><img src="../images/s_h1.png" class="img-fluid" id="sh1"></td>
+                    <td><img src="../images/s_f1.png" class="img-fluid col-f" id="sf1"></td>
+                    <td><img src="../images/s_g1.png" class="img-fluid col-g" id="sg1"></td>
+                    <td><img src="../images/s_h1.png" class="img-fluid col-h" id="sh1"></td>
                     <td><img src="../images/s_i1.png" class="img-fluid" id="si1"></td>
-                    <td><img src="../images/s_j1.png" class="img-fluid" id="sj1"></td>
-                    <td><img src="../images/s_k1.png" class="img-fluid" id="sk1"></td>
-                    <td><img src="../images/s_l1.png" class="img-fluid" id="sl1"></td>
+                    <td><img src="../images/s_j1.png" class="img-fluid col-j" id="sj1"></td>
+                    <td><img src="../images/s_k1.png" class="img-fluid col-k" id="sk1"></td>
+                    <td><img src="../images/s_l1.png" class="img-fluid col-l" id="sl1"></td>
                     <td><img src="../images/s_m1.png" class="img-fluid" id="sm1"></td>
                 </tr>
                 <tr>
                     <td><img src="../images/s_a2.png" class="img-fluid" id="sa2"></td>
-                    <td><img src="../images/s_b2.png" class="img-fluid" id="sb2"></td>
-                    <td><img src="../images/s_c2.png" class="img-fluid" id="sc2"></td>
-                    <td><img src="../images/s_d2.png" class="img-fluid" id="sd2"></td>
+                    <td><img src="../images/s_b2.png" class="img-fluid col-b" id="sb2"></td>
+                    <td><img src="../images/s_c2.png" class="img-fluid col-c" id="sc2"></td>
+                    <td><img src="../images/s_d2.png" class="img-fluid col-d" id="sd2"></td>
                     <td><img src="../images/s_e2.png" class="img-fluid" id="se2"></td>
-                    <td><img src="../images/s_f2.png" class="img-fluid" id="sf2"></td>
-                    <td><img src="../images/s_g2.png" class="img-fluid" id="sg2"></td>
-                    <td><img src="../images/s_h2.png" class="img-fluid" id="sh2"></td>
+                    <td><img src="../images/s_f2.png" class="img-fluid col-f" id="sf2"></td>
+                    <td><img src="../images/s_g2.png" class="img-fluid col-g" id="sg2"></td>
+                    <td><img src="../images/s_h2.png" class="img-fluid col-h" id="sh2"></td>
                     <td><img src="../images/s_i2.png" class="img-fluid" id="si2"></td>
-                    <td><img src="../images/s_j2.png" class="img-fluid" id="sj2"></td>
-                    <td><img src="../images/s_k2.png" class="img-fluid" id="sk2"></td>
-                    <td><img src="../images/s_l2.png" class="img-fluid" id="sl2"></td>
+                    <td><img src="../images/s_j2.png" class="img-fluid col-j" id="sj2"></td>
+                    <td><img src="../images/s_k2.png" class="img-fluid col-k" id="sk2"></td>
+                    <td><img src="../images/s_l2.png" class="img-fluid col-l" id="sl2"></td>
                     <td><img src="../images/s_m2.png" class="img-fluid" id="sm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/s_b3.png" class="img-fluid" id="sb3"></td>
-                    <td><img src="../images/s_c3.png" class="img-fluid" id="sc3"></td>
-                    <td><img src="../images/s_d3.png" class="img-fluid" id="sd3"></td>
+                    <td><img src="../images/s_b3.png" class="img-fluid col-b" id="sb3"></td>
+                    <td><img src="../images/s_c3.png" class="img-fluid col-c" id="sc3"></td>
+                    <td><img src="../images/s_d3.png" class="img-fluid col-d" id="sd3"></td>
                     <td></td>
-                    <td><img src="../images/s_f3.png" class="img-fluid" id="sf3"></td>
-                    <td><img src="../images/s_g3.png" class="img-fluid" id="sg3"></td>
-                    <td><img src="../images/s_h3.png" class="img-fluid" id="sh3"></td>
+                    <td><img src="../images/s_f3.png" class="img-fluid col-f" id="sf3"></td>
+                    <td><img src="../images/s_g3.png" class="img-fluid col-g" id="sg3"></td>
+                    <td><img src="../images/s_h3.png" class="img-fluid col-h" id="sh3"></td>
                     <td></td>
-                    <td><img src="../images/s_j3.png" class="img-fluid" id="sj3"></td>
-                    <td><img src="../images/s_k3.png" class="img-fluid" id="sk3"></td>
-                    <td><img src="../images/s_l3.png" class="img-fluid" id="sl3"></td>
+                    <td><img src="../images/s_j3.png" class="img-fluid col-j" id="sj3"></td>
+                    <td><img src="../images/s_k3.png" class="img-fluid col-k" id="sk3"></td>
+                    <td><img src="../images/s_l3.png" class="img-fluid col-l" id="sl3"></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/s_b4.png" class="img-fluid" id="sb4"></td>
-                    <td><img src="../images/s_c4.png" class="img-fluid" id="sc4"></td>
-                    <td><img src="../images/s_d4.png" class="img-fluid" id="sd4"></td>
+                    <td><img src="../images/s_b4.png" class="img-fluid col-b" id="sb4"></td>
+                    <td><img src="../images/s_c4.png" class="img-fluid col-c" id="sc4"></td>
+                    <td><img src="../images/s_d4.png" class="img-fluid col-d" id="sd4"></td>
                     <td></td>
-                    <td><img src="../images/s_f4.png" class="img-fluid" id="sf4"></td>
-                    <td><img src="../images/s_g4.png" class="img-fluid" id="sg4"></td>
-                    <td><img src="../images/s_h4.png" class="img-fluid" id="sh4"></td>
+                    <td><img src="../images/s_f4.png" class="img-fluid col-f" id="sf4"></td>
+                    <td><img src="../images/s_g4.png" class="img-fluid col-g" id="sg4"></td>
+                    <td><img src="../images/s_h4.png" class="img-fluid col-h" id="sh4"></td>
                     <td></td>
-                    <td><img src="../images/s_j4.png" class="img-fluid" id="sj4"></td>
-                    <td><img src="../images/s_k4.png" class="img-fluid" id="sk4"></td>
-                    <td><img src="../images/s_l4.png" class="img-fluid" id="sl4"></td>
+                    <td><img src="../images/s_j4.png" class="img-fluid col-j" id="sj4"></td>
+                    <td><img src="../images/s_k4.png" class="img-fluid col-k" id="sk4"></td>
+                    <td><img src="../images/s_l4.png" class="img-fluid col-l" id="sl4"></td>
                     <td></td>
                 </tr>
             </tbody>
