--- a/classP/v.html
+++ b/classP/v.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../style.css">
     <script src="../script.js" defer></script>
+    <script src="../logicP.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
 
@@ -71,62 +72,62 @@
             <tbody>
                 <tr>
                     <td><img src="../images/v_a1.png" class="img-fluid" id="va1"></td>
-                    <td><img src="../images/v_b1.png" class="img-fluid" id="vb1"></td>
-                    <td><img src="../images/v_c1.png" class="img-fluid" id="vc1"></td>
-                    <td><img src="../images/v_d1.png" class="img-fluid" id="vd1"></td>
+                    <td><img src="../images/v_b1.png" class="img-fluid col-b" id="vb1"></td>
+                    <td><img src="../images/v_c1.png" class="img-fluid col-c" id="vc1"></td>
+                    <td><img src="../images/v_d1.png" class="img-fluid col-d" id="vd1"></td>
                     <td><img src="../images/v_e1.png" class="img-fluid" id="ve1"></td>
-                    <td><img src="../images/v_f1.png" class="img-fluid" id="vf1"></td>
-                    <td><img src="../images/v_g1.png" class="img-fluid" id="vg1"></td>
-                    <td><img src="../images/v_h1.png" class="img-fluid" id="vh1"></td>
+                    <td><img src="../images/v_f1.png" class="img-fluid col-f" id="vf1"></td>
+                    <td><img src="../images/v_g1.png" class="img-fluid col-g" id="vg1"></td>
+                    <td><img src="../images/v_h1.png" class="img-fluid col-h" id="vh1"></td>
                     <td><img src="../images/v_i1.png" class="img-fluid" id="vi1"></td>
-                    <td><img src="../images/v_j1.png" class="img-fluid" id="vj1"></td>
-                    <td><img src="../images/v_k1.png" class="img-fluid" id="vk1"></td>
-                    <td><img src="../images/v_l1.png" class="img-fluid" id="vl1"></td>
+                    <td><img src="../images/v_j1.png" class="img-fluid col-j" id="vj1"></td>
+                    <td><img src="../images/v_k1.png" class="img-fluid col-k" id="vk1"></td>
+                    <td><img src="../images/v_l1.png" class="img-fluid col-l" id="vl1"></td>
                     <td><img src="../images/v_m1.png" class="img-fluid" id="vm1"></td>
                 </tr>
                 <tr>
                     <td><img src="../images/v_a2.png" class="img-fluid" id="va2"></td>
-                    <td><img src="../images/v_b2.png" class="img-fluid" id="vb2"></td>
-                    <td><img src="../images/v_c2.png" class="img-fluid" id="vc2"></td>
-                    <td><img src="../images/v_d2.png" class="img-fluid" id="vd2"></td>
+                    <td><img src="../images/v_b2.png" class="img-fluid col-b" id="vb2"></td>
+                    <td><img src="../images/v_c2.png" class="img-fluid col-c" id="vc2"></td>
+                    <td><img src="../images/v_d2.png" class="img-fluid col-d" id="vd2"></td>
                     <td><img src="../images/v_e2.png" class="img-fluid" id="ve2"></td>
-                    <td><img src="../images/v_f2.png" class="img-fluid" id="vf2"></td>
-                    <td><img src="../images/v_g2.png" class="img-fluid" id="vg2"></td>
-                    <td><img src="../images/v_h2.png" class="img-fluid" id="vh2"></td>
+                    <td><img src="../images/v_f2.png" class="img-fluid col-f" id="vf2"></td>
+                    <td><img src="../images/v_g2.png" class="img-fluid col-g" id="vg2"></td>
+                    <td><img src="../images/v_h2.png" class="img-fluid col-h" id="vh2"></td>
                     <td><img src="../images/v_i2.png" class="img-fluid" id="vi2"></td>
-                    <td><img src="../images/v_j2.png" class="img-fluid" id="vj2"></td>
-                    <td><img src="../images/v_k2.png" class="img-fluid" id="vk2"></td>
-                    <td><img src="../images/v_l2.png" class="img-fluid" id="vl2"></td>
+                    <td><img src="../images/v_j2.png" class="img-fluid col-j" id="vj2"></td>
+                    <td><img src="../images/v_k2.png" class="img-fluid col-k" id="vk2"></td>
+                    <td><img src="../images/v_l2.png" class="img-fluid col-l" id="vl2"></td>
                     <td><img src="../images/v_m2.png" class="img-fluid" id="vm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/v_b3.png" class="img-fluid" id="vb3"></td>
-                    <td><img src="../images/v_c3.png" class="img-fluid" id="vc3"></td>
-                    <td><img src="../images/v_d3.png" class="img-fluid" id="vd3"></td>
+                    <td><img src="../images/v_b3.png" class="img-fluid col-b" id="vb3"></td>
+                    <td><img src="../images/v_c3.png" class="img-fluid col-c" id="vc3"></td>
+                    <td><img src="../images/v_d3.png" class="img-fluid col-d" id="vd3"></td>
                     <td></td>
-                    <td><img src="../images/v_f3.png" class="img-fluid" id="vf3"></td>
-                    <td><img src="../images/v_g3.png" class="img-fluid" id="vg3"></td>
-                    <td><img src="../images/v_h3.png" class="img-fluid" id="vh3"></td>
+                    <td><img src="../images/v_f3.png" class="img-fluid col-f" id="vf3"></td>
+                    <td><img src="../images/v_g3.png" class="img-fluid col-g" id="vg3"></td>
+                    <td><img src="../images/v_h3.png" class="img-fluid col-h" id="vh3"></td>
                     <td></td>
-                    <td><img src="../images/v_j3.png" class="img-fluid" id="vj3"></td>
-                    <td><img src="../images/v_k3.png" class="img-fluid" id="vk3"></td>
-                    <td><img src="../images/v_l3.png" class="img-fluid" id="vl3"></td>
+                    <td><img src="../images/v_j3.png" class="img-fluid col-j" id="vj3"></td>
+                    <td><img src="../images/v_k3.png" class="img-fluid col-k" id="vk3"></td>
+                    <td><img src="../images/v_l3.png" class="img-fluid col-l" id="vl3"></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="../images/v_b4.png" class="img-fluid" id="vb4"></td>
-                    <td><img src="../images/v_c4.png" class="img-fluid" id="vc4"></td>
-                    <td><img src="../images/v_d4.png" class="img-fluid" id="vd4"></td>
+                    <td><img src="../images/v_b4.png" class="img-fluid col-b" id="vb4"></td>
+                    <td><img src="../images/v_c4.png" class="img-fluid col-c" id="vc4"></td>
+                    <td><img src="../images/v_d4.png" class="img-fluid col-d" id="vd4"></td>
                     <td></td>
-                    <td><img src="../images/v_f4.png" class="img-fluid" id="vf4"></td>
-                    <td><img src="../images/v_g4.png" class="img-fluid" id="vg4"></td>
-                    <td><img src="../images/v_h4.png" class="img-fluid" id="vh4"></td>
+                    <td><img src="../images/v_f4.png" class="img-fluid col-f" id="vf4"></td>
+                    <td><img src="../images/v_g4.png" class="img-fluid col-g" id="vg4"></td>
+                    <td><img src="../images/v_h4.png" class="img-fluid col-h" id="vh4"></td>
                     <td></td>
-                    <td><img src="../images/v_j4.png" class="img-fluid" id="vj4"></td>
-                    <td><img src="../images/v_k4.png" class="img-fluid" id="vk4"></td>
-                    <td><img src="../images/v_l4.png" class="img-fluid" id="vl4"></td>
+                    <td><img src="../images/v_j4.png" class="img-fluid col-j" id="vj4"></td>
+                    <td><img src="../images/v_k4.png" class="img-fluid col-k" id="vk4"></td>
+                    <td><img src="../images/v_l4.png" class="img-fluid col-l" id="vl4"></td>
                     <td></td>
                 </tr>
             </tbody>
