--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="logicP.js" defer></script>
     <script src="https://kit.fontawesome.com/852e8a85e4.js" crossorigin="anonymous" defer></script>
 </head>
 
@@ -71,62 +72,62 @@
             <tbody>
                 <tr>
                     <td><img src="images/gs_a1.png" class="img-fluid" id="gsa1"></td>
-                    <td><img src="images/gs_b1.png" class="img-fluid" id="gsb1"></td>
-                    <td><img src="images/gs_c1.png" class="img-fluid" id="gsc1"></td>
-                    <td><img src="images/gs_d1.png" class="img-fluid" id="gsd1"></td>
+                    <td><img src="images/gs_b1.png" class="img-fluid col-b" id="gsb1"></td>
+                    <td><img src="images/gs_c1.png" class="img-fluid col-c" id="gsc1"></td>
+                    <td><img src="images/gs_d1.png" class="img-fluid col-d" id="gsd1"></td>
                     <td><img src="images/gs_e1.png" class="img-fluid" id="gse1"></td>
-                    <td><img src="images/gs_f1.png" class="img-fluid" id="gsf1"></td>
-                    <td><img src="images/gs_g1.png" class="img-fluid" id="gsg1"></td>
-                    <td><img src="images/gs_h1.png" class="img-fluid" id="gsh1"></td>
+                    <td><img src="images/gs_f1.png" class="img-fluid col-f" id="gsf1"></td>
+                    <td><img src="images/gs_g1.png" class="img-fluid col-g" id="gsg1"></td>
+                    <td><img src="images/gs_h1.png" class="img-fluid col-h" id="gsh1"></td>
                     <td><img src="images/gs_i1.png" class="img-fluid" id="gsi1"></td>
-                    <td><img src="images/gs_j1.png" class="img-fluid" id="gsj1"></td>
-                    <td><img src="images/gs_k1.png" class="img-fluid" id="gsk1"></td>
-                    <td><img src="images/gs_l1.png" class="img-fluid" id="gsl1"></td>
+                    <td><img src="images/gs_j1.png" class="img-fluid col-j" id="gsj1"></td>
+                    <td><img src="images/gs_k1.png" class="img-fluid col-k" id="gsk1"></td>
+                    <td><img src="images/gs_l1.png" class="img-fluid col-l" id="gsl1"></td>
                     <td><img src="images/gs_m1.png" class="img-fluid" id="gsm1"></td>
                 </tr>
                 <tr>
                     <td><img src="images/gs_a2.png" class="img-fluid" id="gsa2"></td>
-                    <td><img src="images/gs_b2.png" class="img-fluid" id="gsb2"></td>
-                    <td><img src="images/gs_c2.png" class="img-fluid" id="gsc2"></td>
-                    <td><img src="images/gs_d2.png" class="img-fluid" id="gsd2"></td>
+                    <td><img src="images/gs_b2.png" class="img-fluid col-b" id="gsb2"></td>
+                    <td><img src="images/gs_c2.png" class="img-fluid col-c" id="gsc2"></td>
+                    <td><img src="images/gs_d2.png" class="img-fluid col-d" id="gsd2"></td>
                     <td><img src="images/gs_e2.png" class="img-fluid" id="gse2"></td>
-                    <td><img src="images/gs_f2.png" class="img-fluid" id="gsf2"></td>
-                    <td><img src="images/gs_g2.png" class="img-fluid" id="gsg2"></td>
-                    <td><img src="images/gs_h2.png" class="img-fluid" id="gsh2"></td>
+                    <td><img src="images/gs_f2.png" class="img-fluid col-f" id="gsf2"></td>
+                    <td><img src="images/gs_g2.png" class="img-fluid col-g" id="gsg2"></td>
+                    <td><img src="images/gs_h2.png" class="img-fluid col-h" id="gsh2"></td>
                     <td><img src="images/gs_i2.png" class="img-fluid" id="gsi2"></td>
-                    <td><img src="images/gs_j2.png" class="img-fluid" id="gsj2"></td>
-                    <td><img src="images/gs_k2.png" class="img-fluid" id="gsk2"></td>
-                    <td><img src="images/gs_l2.png" class="img-fluid" id="gsl2"></td>
+                    <td><img src="images/gs_j2.png" class="img-fluid col-j" id="gsj2"></td>
+                    <td><img src="images/gs_k2.png" class="img-fluid col-k" id="gsk2"></td>
+                    <td><img src="images/gs_l2.png" class="img-fluid col-l" id="gsl2"></td>
                     <td><img src="images/gs_m2.png" class="img-fluid" id="gsm2"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="images/gs_b3.png" class="img-fluid" id="gsb3"></td>
-                    <td><img src="images/gs_c3.png" class="img-fluid" id="gsc3"></td>
-                    <td><img src="images/gs_d3.png" class="img-fluid" id="gsd3"></td>
+                    <td><img src="images/gs_b3.png" class="img-fluid col-b" id="gsb3"></td>
+                    <td><img src="images/gs_c3.png" class="img-fluid col-c" id="gsc3"></td>
+                    <td><img src="images/gs_d3.png" class="img-fluid col-d" id="gsd3"></td>
                     <td></td>
-                    <td><img src="images/gs_f3.png" class="img-fluid" id="gsf3"></td>
-                    <td><img src="images/gs_g3.png" class="img-fluid" id="gsg3"></td>
-                    <td><img src="images/gs_h3.png" class="img-fluid" id="gsh3"></td>
+                    <td><img src="images/gs_f3.png" class="img-fluid col-f" id="gsf3"></td>
+                    <td><img src="images/gs_g3.png" class="img-fluid col-g" id="gsg3"></td>
+                    <td><img src="images/gs_h3.png" class="img-fluid col-h" id="gsh3"></td>
                     <td></td>
-                    <td><img src="images/gs_j3.png" class="img-fluid" id="gsj3"></td>
-                    <td><img src="images/gs_k3.png" class="img-fluid" id="gsk3"></td>
-                    <td><img src="images/gs_l3.png" class="img-fluid" id="gsl3"></td>
+                    <td><img src="images/gs_j3.png" class="img-fluid col-j" id="gsj3"></td>
+                    <td><img src="images/gs_k3.png" class="img-fluid col-k" id="gsk3"></td>
+                    <td><img src="images/gs_l3.png" class="img-fluid col-l" id="gsl3"></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><img src="images/gs_b4.png" class="img-fluid" id="gsb4"></td>
-                    <td><img src="images/gs_c4.png" class="img-fluid" id="gsc4"></td>
-                    <td><img src="images/gs_d4.png" class="img-fluid" id="gsd4"></td>
+                    <td><img src="images/gs_b4.png" class="img-fluid col-b" id="gsb4"></td>
+                    <td><img src="images/gs_c4.png" class="img-fluid col-c" id="gsc4"></td>
+                    <td><img src="images/gs_d4.png" class="img-fluid col-d" id="gsd4"></td>
                     <td></td>
-                    <td><img src="images/gs_f4.png" class="img-fluid" id="gsf4"></td>
-                    <td><img src="images/gs_g4.png" class="img-fluid" id="gsg4"></td>
-                    <td><img src="images/gs_h4.png" class="img-fluid" id="gsh4"></td>
+                    <td><img src="images/gs_f4.png" class="img-fluid col-f" id="gsf4"></td>
+                    <td><img src="images/gs_g4.png" class="img-fluid col-g" id="gsg4"></td>
+                    <td><img src="images/gs_h4.png" class="img-fluid col-h" id="gsh4"></td>
                     <td></td>
-                    <td><img src="images/gs_j4.png" class="img-fluid" id="gsj4"></td>
-                    <td><img src="images/gs_k4.png" class="img-fluid" id="gsk4"></td>
-                    <td><img src="images/gs_l4.png" class="img-fluid" id="gsl4"></td>
+                    <td><img src="images/gs_j4.png" class="img-fluid col-j" id="gsj4"></td>
+                    <td><img src="images/gs_k4.png" class="img-fluid col-k" id="gsk4"></td>
+                    <td><img src="images/gs_l4.png" class="img-fluid col-l" id="gsl4"></td>
                     <td></td>
                 </tr>
             </tbody>
